@@ -11,11 +11,11 @@ import static org.junit.jupiter.api.Assertions.*;
 /**
  * Tests to verify the immutability of the MapNode class.
  */
-public class MapNodeImmutabilityTest {
+class MapNodeImmutabilityTest {
 
 	@Test
-	void testRetypeReturnsNewInstance() {
-		MapNode original = new MapNode(); Node modified = original.retype("TestType");
+	final void testRetypeReturnsNewInstance() {
+		final Node original = new MapNode(); final Node modified = original.retype("TestType");
 
 		// Verify that a new instance was returned
 		assertNotSame(original, modified);
@@ -28,8 +28,8 @@ public class MapNodeImmutabilityTest {
 	}
 
 	@Test
-	void testWithStringReturnsNewInstance() {
-		MapNode original = new MapNode(); Node modified = original.withString("key", "value");
+	final void testWithStringReturnsNewInstance() {
+		final Node original = new MapNode(); final Node modified = original.withString("key", "value");
 
 		// Verify that a new instance was returned
 		assertNotSame(original, modified);
@@ -42,9 +42,9 @@ public class MapNodeImmutabilityTest {
 	}
 
 	@Test
-	void testWithNodeListReturnsNewInstance() {
-		MapNode original = new MapNode(); List<Node> nodes = Arrays.asList(new MapNode(), new MapNode());
-		Node modified = original.withNodeList("key", nodes);
+	final void testWithNodeListReturnsNewInstance() {
+		final Node original = new MapNode(); final List<Node> nodes = Arrays.asList(new MapNode(), new MapNode());
+		final Node modified = original.withNodeList("key", nodes);
 
 		// Verify that a new instance was returned
 		assertNotSame(original, modified);
@@ -57,58 +57,35 @@ public class MapNodeImmutabilityTest {
 	}
 
 	@Test
-	void testMergeReturnsNewInstance() {
-		MapNode original1 = new MapNode(); original1 = (MapNode) original1.withString("key1", "value1");
-
-		MapNode original2 = new MapNode(); original2 = (MapNode) original2.withString("key2", "value2");
-
-		Node merged = original1.merge(original2);
-
-		// Verify that a new instance was returned
-		assertNotSame(original1, merged); assertNotSame(original2, merged);
-
-		// Verify that the originals were not modified
-		assertEquals(Optional.of("value1"), original1.findString("key1"));
-		assertTrue(original1.findString("key2").isEmpty());
-
-		assertEquals(Optional.of("value2"), original2.findString("key2"));
-		assertTrue(original2.findString("key1").isEmpty());
-
-		// Verify that the merged instance has properties from both originals
-		assertEquals(Optional.of("value1"), merged.findString("key1"));
-		assertEquals(Optional.of("value2"), merged.findString("key2"));
-	}
-
-	@Test
-	void testMergeWithOverlappingProperties() {
+	final void testMergeWithOverlappingProperties() {
 		MapNode original1 = new MapNode(); original1 = (MapNode) original1.withString("key", "value1");
 
 		MapNode original2 = new MapNode(); original2 = (MapNode) original2.withString("key", "value2");
 
-		Node merged = original1.merge(original2);
+		final Node merged = original1.merge(original2);
 
 		// Verify that the merged instance has the value from the second node
 		assertEquals(Optional.of("value2"), merged.findString("key"));
 	}
 
 	@Test
-	void testMergeWithOverlappingTypeTag() {
+	final void testMergeWithOverlappingTypeTag() {
 		MapNode original1 = new MapNode(); original1 = (MapNode) original1.retype("Type1");
 
 		MapNode original2 = new MapNode(); original2 = (MapNode) original2.retype("Type2");
 
-		Node merged = original1.merge(original2);
+		final Node merged = original1.merge(original2);
 
 		// Verify that the merged instance has the type from the first node
 		assertEquals(Optional.of("Type1"), merged.type());
 	}
 
 	@Test
-	void testChainedOperations() {
-		MapNode original = new MapNode();
+	final void testChainedOperations() {
+		final Node original = new MapNode();
 
 		// Chain multiple operations
-		Node modified = original.retype("TestType").withString("key1", "value1").withString("key2", "value2");
+		final Node modified = original.retype("TestType").withString("key1", "value1").withString("key2", "value2");
 
 		// Verify that a new instance was returned
 		assertNotSame(original, modified);
@@ -124,18 +101,18 @@ public class MapNodeImmutabilityTest {
 	}
 
 	@Test
-	void testNodeListImmutability() {
+	final void testNodeListImmutability() {
 		// Create a list of nodes
-		List<Node> originalList = Arrays.asList(new MapNode().retype("Child1"), new MapNode().retype("Child2"));
+		final List<Node> originalList = Arrays.asList(new MapNode().retype("Child1"), new MapNode().retype("Child2"));
 
 		// Add the list to a node
 		MapNode node = new MapNode(); node = (MapNode) node.withNodeList("children", originalList);
 
 		// Modify the original list
-		((List<Node>) originalList).set(0, new MapNode().retype("ModifiedChild"));
+		originalList.set(0, new MapNode().retype("ModifiedChild"));
 
 		// Verify that the node's list was not affected by the modification
-		List<Node> retrievedList = node.findNodeList("children").get();
-		assertEquals("Child1", retrievedList.get(0).type().get());
+		final List<Node> retrievedList = node.findNodeList("children").get();
+		assertEquals("Child1", retrievedList.getFirst().type().get());
 	}
 }
